0029069: Samples - handle UNICODE filenames within C++/CLI CSharp sample